--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import seaborn as sns"
    ]
   },
   {
