--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
   },
@@ -55,8 +56,54 @@
     "if not wine_quality_white_filename.exists():\n",
     "    raise FileNotFoundError(f\"Dataset file not found: {wine_quality_white_filename}\")\n",
     "\n",
-    "wine_red = pd.read_csv(wine_quality_red_filename, sep=';')\n",
-    "wine_white = pd.read_csv(wine_quality_white_filename, sep=';')"
+    "wine_red = pd.read_csv(wine_quality_red_filename, sep=';') # 1599 data points\n",
+    "wine_white = pd.read_csv(wine_quality_white_filename, sep=';') # 4898 data points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ef15784",
+   "metadata": {},
+   "source": [
+    "# Question 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3b8d640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wine_red_quality = wine_red['quality'] # Range 3-8\n",
+    "wine_white_quality = wine_white['quality'] # Range 3-9\n",
+    "\n",
+    "# Ranges found with below functions\n",
+    "print(\"Red wine quality scores range: [{0},{1}]\".format(wine_red_quality.min(), wine_red_quality.max()))\n",
+    "print(\"White wine quality scores range: [{0},{1}]\".format(wine_white_quality.min(), wine_white_quality.max()))\n",
+    "\n",
+    "# Format bin size\n",
+    "bins = [0.5, 1.5, 2.5, 3.5, 4.5, 5.5, 6.5, 7.5, 8.5, 9.5, 10.5]\n",
+    "\n",
+    "# Make both plots side by side\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,5))  # side by side\n",
+    "\n",
+    "# Plot red wine quality\n",
+    "ax1.hist(wine_red_quality, bins=bins, color='red', edgecolor='black')\n",
+    "ax1.set_xticks(range(0, 11))\n",
+    "ax1.set_title(\"Red Wine Quality\")\n",
+    "ax1.set_xlabel(\"Quality\")\n",
+    "ax1.set_ylabel(\"Count\")\n",
+    "\n",
+    "# Plot white wine quality\n",
+    "ax2.hist(wine_white_quality, bins=bins, color='gold', edgecolor='black')\n",
+    "ax2.set_xticks(range(0, 11))\n",
+    "ax2.set_title(\"White Wine Quality\")\n",
+    "ax2.set_xlabel(\"Quality\")\n",
+    "ax2.set_ylabel(\"Count\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
