Q2: finished graphs with fixed ylims

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ea23df30",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6146fff3",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "bc55a2ac",
    "metadata": {},
    "outputs": [],
@@ -102,6 +102,87 @@
     "ax2.set_xlabel(\"Quality\")\n",
     "ax2.set_ylabel(\"Count\")\n",
     "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4240d91c",
+   "metadata": {},
+   "source": [
+    "# Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97cbe771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed acidity\n",
+    "wine_red_fixed_acidity = wine_red['fixed acidity']\n",
+    "wine_white_fixed_acidity = wine_white['fixed acidity']\n",
+    "# Make both plots side by side\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,5))  # side by side\n",
+    "ax1.boxplot(wine_red_fixed_acidity)\n",
+    "ax1.set_title(\"Red Wine Fixed acidity\")\n",
+    "ax1.set_ylim(3, 17)\n",
+    "ax2.boxplot(wine_white_fixed_acidity)\n",
+    "ax2.set_title(\"White Wine Fixed acidity\")\n",
+    "ax2.set_ylim(3, 17)\n",
+    "ax1.set_xticks([]) # Hides the 1\n",
+    "ax2.set_xticks([]) # Hides the 1\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# Volatile acidity\n",
+    "wine_red_volatile_acidity = wine_red['volatile acidity']\n",
+    "wine_white_volatile_acidity = wine_white['volatile acidity']\n",
+    "# Make both plots side by side\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,5))  # side by side\n",
+    "ax1.boxplot(wine_red_volatile_acidity)\n",
+    "ax1.set_title(\"Red Wine Volatile acidity\")\n",
+    "ax1.set_ylim(0, 1.7) \n",
+    "ax2.boxplot(wine_white_volatile_acidity)\n",
+    "ax2.set_title(\"White Wine Volatile acidity\")\n",
+    "ax2.set_ylim(0, 1.7)\n",
+    "ax1.set_xticks([]) # Hides the 1\n",
+    "ax2.set_xticks([]) # Hides the 1\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# pH\n",
+    "wine_red_pH = wine_red['pH']\n",
+    "wine_white_pH = wine_white['pH']\n",
+    "# Make both plots side by side\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,5))  # side by side\n",
+    "ax1.boxplot(wine_red_pH)\n",
+    "ax1.set_title(\"Red Wine pH\")\n",
+    "ax1.set_ylim(2.6, 4.2)\n",
+    "ax2.boxplot(wine_white_pH)\n",
+    "ax2.set_title(\"White Wine pH\")\n",
+    "ax2.set_ylim(2.6, 4.2)\n",
+    "ax1.set_xticks([]) # Hides the 1\n",
+    "ax2.set_xticks([]) # Hides the 1\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Density\n",
+    "wine_red_density = wine_red['density']\n",
+    "wine_white_density = wine_white['density']\n",
+    "# Make both plots side by side\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,5))  # side by side\n",
+    "ax1.boxplot(wine_red_density)\n",
+    "ax1.set_title(\"Red Wine density\")\n",
+    "ax1.set_ylim(0.98, 1.04)\n",
+    "ax2.boxplot(wine_white_density)\n",
+    "ax2.set_title(\"White Wine density\")\n",
+    "ax2.set_ylim(0.98, 1.04)\n",
+    "ax1.set_xticks([]) # Hides the 1\n",
+    "ax2.set_xticks([]) # Hides the 1\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
