--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -160,6 +160,28 @@
     "create_boxplots('pH', (2.6, 4.2))\n",
     "create_boxplots('density', (0.98, 1.04))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c4f7895",
+   "metadata": {},
+   "source": [
+    "# Question 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a910614a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wine_red_scatter_subset = wine_red[['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar']]\n",
+    "wine_white_scatter_subset = wine_white[['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar']]\n",
+    "\n",
+    "pd.plotting.scatter_matrix(wine_red_scatter_subset, alpha=0.2, figsize=(12, 12), c='red')\n",
+    "pd.plotting.scatter_matrix(wine_white_scatter_subset, alpha=0.2, figsize=(12, 12), c='gold')"
+   ]
   }
  ],
  "metadata": {
