Finished Q4 Euclidean distance

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ea23df30",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,13 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "6146fff3",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "bc55a2ac",
    "metadata": {},
    "outputs": [],
@@ -181,6 +182,74 @@
     "\n",
     "pd.plotting.scatter_matrix(wine_red_scatter_subset, alpha=0.2, figsize=(12, 12), c='red')\n",
     "pd.plotting.scatter_matrix(wine_white_scatter_subset, alpha=0.2, figsize=(12, 12), c='gold')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af54a2d4",
+   "metadata": {},
+   "source": [
+    "# Question 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39f10849",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1599, 1599)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def euclidean(rowA, rowB):\n",
+    "    return np.sqrt(np.square(rowA - rowB).sum())\n",
+    "\n",
+    "# def generateMatrix(data, distance_function):\n",
+    "#     return\n",
+    "\n",
+    "\n",
+    "def generateMatrix(data):\n",
+    "    matrix = np.zeros((len(data), len(data)))\n",
+    "    print(matrix.shape)\n",
+    "    for index_i, rowA in data.iterrows():\n",
+    "        for index_j, rowB in data.iterrows():\n",
+    "            matrix[index_i][index_j] = euclidean(rowA, rowB)\n",
+    "    return matrix\n",
+    "\n",
+    "\n",
+    "# def generateMatrix(data, distance_function):\n",
+    "    # return\n",
+    "\n",
+    "wine_red_sorted_quality = wine_red.sort_values(by='quality')\n",
+    "wine_white_sorted_quality = wine_white.sort_values(by='quality')\n",
+    "wine_red_sorted_quality = wine_red_sorted_quality.drop(columns='quality')\n",
+    "wine_white_sorted_quality = wine_white_sorted_quality.drop(columns='quality')\n",
+    "wine_red_sorted_quality = wine_red_sorted_quality.reset_index()\n",
+    "wine_white_sorted_quality = wine_white_sorted_quality.reset_index()\n",
+    "\n",
+    "\n",
+    "\n",
+    "wine_red_sorted_quality.to_csv('wine_red_sorted_quality', index=False)\n",
+    "wine_white_sorted_quality.to_csv('wine_white_sorted_quality', index=False)\n",
+    "\n",
+    "euclidean_matrix = generateMatrix(wine_red_sorted_quality)\n",
+    "\n",
+    "print(euclidean_matrix[69][420])\n",
+    "print(euclidean_matrix[0][1])\n",
+    "print(euclidean_matrix[1598][1598])\n",
+    "print(euclidean_matrix[1500][888])\n",
+    "\n",
+    "\n",
+    "# print(wine_red_sorted_quality.iloc[0,:])\n",
+    "# print(wine_red_sorted_quality.iloc[1,:])\n",
+    "# print(euclidean(wine_red_sorted_quality.iloc[3,:], wine_red_sorted_quality.iloc[9,:]))\n",
+    "\n"
    ]
   }
  ],
