Q4, used pdist to increase performance

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -202,54 +202,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1599, 1599)\n"
+      "13.396188523367384\n",
+      "44.889877834077474\n",
+      "0.0\n",
+      "43.8985861282855\n"
      ]
     }
    ],
    "source": [
+    "from scipy.spatial.distance import pdist, squareform\n",
+    "\n",
+    "\n",
     "def euclidean(rowA, rowB):\n",
     "    return np.sqrt(np.square(rowA - rowB).sum())\n",
     "\n",
-    "# def generateMatrix(data, distance_function):\n",
-    "#     return\n",
-    "\n",
-    "\n",
-    "def generateMatrix(data):\n",
-    "    matrix = np.zeros((len(data), len(data)))\n",
-    "    print(matrix.shape)\n",
-    "    for index_i, rowA in data.iterrows():\n",
-    "        for index_j, rowB in data.iterrows():\n",
-    "            matrix[index_i][index_j] = euclidean(rowA, rowB)\n",
+    "def generateMatrix(data, distance_func):\n",
+    "    matrix = squareform(pdist(data, metric=distance_func))\n",
     "    return matrix\n",
-    "\n",
-    "\n",
-    "# def generateMatrix(data, distance_function):\n",
-    "    # return\n",
     "\n",
     "wine_red_sorted_quality = wine_red.sort_values(by='quality')\n",
     "wine_white_sorted_quality = wine_white.sort_values(by='quality')\n",
     "wine_red_sorted_quality = wine_red_sorted_quality.drop(columns='quality')\n",
     "wine_white_sorted_quality = wine_white_sorted_quality.drop(columns='quality')\n",
-    "wine_red_sorted_quality = wine_red_sorted_quality.reset_index()\n",
-    "wine_white_sorted_quality = wine_white_sorted_quality.reset_index()\n",
-    "\n",
-    "\n",
+    "wine_red_sorted_quality = wine_red_sorted_quality.reset_index(drop=True)\n",
+    "wine_white_sorted_quality = wine_white_sorted_quality.reset_index(drop=True)\n",
     "\n",
     "wine_red_sorted_quality.to_csv('wine_red_sorted_quality', index=False)\n",
     "wine_white_sorted_quality.to_csv('wine_white_sorted_quality', index=False)\n",
     "\n",
-    "euclidean_matrix = generateMatrix(wine_red_sorted_quality)\n",
+    "euclidean_matrix = generateMatrix(wine_red_sorted_quality, euclidean)\n",
     "\n",
     "print(euclidean_matrix[69][420])\n",
     "print(euclidean_matrix[0][1])\n",
     "print(euclidean_matrix[1598][1598])\n",
-    "print(euclidean_matrix[1500][888])\n",
-    "\n",
-    "\n",
-    "# print(wine_red_sorted_quality.iloc[0,:])\n",
-    "# print(wine_red_sorted_quality.iloc[1,:])\n",
-    "# print(euclidean(wine_red_sorted_quality.iloc[3,:], wine_red_sorted_quality.iloc[9,:]))\n",
-    "\n"
+    "print(euclidean_matrix[1500][888])"
    ]
   }
  ],
