Added more distance functions and function to calc all at once

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -202,23 +202,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.396188523367384\n",
-      "44.889877834077474\n",
+      "cosine_similarity\n",
+      "0.9994598390908539\n",
+      "0.8365980178843799\n",
       "0.0\n",
-      "43.8985861282855\n"
+      "0.949833898366928\n"
      ]
     }
    ],
    "source": [
     "from scipy.spatial.distance import pdist, squareform\n",
     "\n",
-    "\n",
     "def euclidean(rowA, rowB):\n",
     "    return np.sqrt(np.square(rowA - rowB).sum())\n",
+    "\n",
+    "def minkowski_distance(rowA, rowB, r):\n",
+    "    return np.power(np.power(np.abs(rowA - rowB), r).sum(), 1 / r)\n",
+    "\n",
+    "def minkowski_distance_1(rowA, rowB):\n",
+    "    return minkowski_distance(rowA, rowB, 1)\n",
+    "\n",
+    "def minkowski_distance_3(rowA, rowB):\n",
+    "    return minkowski_distance(rowA, rowB, 3)\n",
+    "\n",
+    "def minkowski_distance_5(rowA, rowB):\n",
+    "    return minkowski_distance(rowA, rowB, 5)\n",
+    "\n",
+    "def mahalanobis_distance(rowA, rowB):\n",
+    "    return 69\n",
+    "\n",
+    "def cosine_similarity(rowA, rowB):\n",
+    "    return rowA.dot(rowB) / np.sqrt(np.square(rowA).sum()) / np.sqrt(np.square(rowB).sum())\n",
+    "\n",
+    "def correlation(rowA, rowB):\n",
+    "    return 69\n",
+    "\n",
+    "def linear_combo(rowA, rowB):\n",
+    "    return 69\n",
     "\n",
     "def generateMatrix(data, distance_func):\n",
     "    matrix = squareform(pdist(data, metric=distance_func))\n",
     "    return matrix\n",
+    "\n",
+    "def generateMatricesForDataset(data, distance_func_list):\n",
+    "    matrix_list = []\n",
+    "    for distance_func in distance_func_list:\n",
+    "         matrix = generateMatrix(data, distance_func)\n",
+    "         matrix_list.append(matrix)\n",
+    "         print(distance_func.__name__)\n",
+    "         print(matrix[69][420])\n",
+    "         print(matrix[0][1])\n",
+    "         print(matrix[1598][1598])\n",
+    "         print(matrix[1500][888])\n",
+    "\n",
     "\n",
     "wine_red_sorted_quality = wine_red.sort_values(by='quality')\n",
     "wine_white_sorted_quality = wine_white.sort_values(by='quality')\n",
@@ -230,12 +266,23 @@
     "wine_red_sorted_quality.to_csv('wine_red_sorted_quality', index=False)\n",
     "wine_white_sorted_quality.to_csv('wine_white_sorted_quality', index=False)\n",
     "\n",
-    "euclidean_matrix = generateMatrix(wine_red_sorted_quality, euclidean)\n",
+    "distance_func_list = [euclidean, minkowski_distance_1, minkowski_distance_3, minkowski_distance_5, \n",
+    "                      mahalanobis_distance, cosine_similarity, correlation, linear_combo]\n",
+    "# distance_func_list = [cosine_similarity]\n",
     "\n",
-    "print(euclidean_matrix[69][420])\n",
-    "print(euclidean_matrix[0][1])\n",
-    "print(euclidean_matrix[1598][1598])\n",
-    "print(euclidean_matrix[1500][888])"
+    "# euclidean_matrix = generateMatrix(wine_red_sorted_quality, euclidean)\n",
+    "# md_1 = generateMatrix(wine_red_sorted_quality, minkowski_distance_1)\n",
+    "generateMatricesForDataset(wine_red_sorted_quality, distance_func_list)\n",
+    "\n",
+    "# print(euclidean_matrix[69][420])\n",
+    "# print(euclidean_matrix[0][1])\n",
+    "# print(euclidean_matrix[1598][1598])\n",
+    "# print(euclidean_matrix[1500][888])\n",
+    "\n",
+    "# print(md_1[69][420])\n",
+    "# print(md_1[0][1])\n",
+    "# print(md_1[1598][1598])\n",
+    "# print(md_1[1500][888])"
    ]
   }
  ],
