Q4: implemented rest of distance functions

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ea23df30",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6146fff3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bc55a2ac",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "39f10849",
    "metadata": {},
    "outputs": [
@@ -202,22 +202,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cosine_similarity\n",
-      "0.9994598390908539\n",
-      "0.8365980178843799\n",
+      "euclidean\n",
+      "13.214305390507668\n",
+      "44.882748712154424\n",
       "0.0\n",
-      "0.949833898366928\n"
+      "43.89573856381164\n",
+      "minkowski_distance_1\n",
+      "17.463440000000002\n",
+      "70.53472\n",
+      "0.0\n",
+      "62.86825\n",
+      "minkowski_distance_3\n",
+      "13.018646106722205\n",
+      "39.946038269405676\n",
+      "0.0\n",
+      "40.682331464159475\n",
+      "minkowski_distance_5\n",
+      "13.000235470973672\n",
+      "36.63017334563909\n",
+      "0.0\n",
+      "39.2728063814621\n",
+      "mahalanobis_distance\n",
+      "5.183623114086469\n",
+      "6.120846224495687\n",
+      "0.0\n",
+      "3.0675575799949866\n",
+      "cosine_similarity\n",
+      "0.9994627779466766\n",
+      "0.891850097126967\n",
+      "0.0\n",
+      "0.9724982412218166\n",
+      "correlation\n",
+      "9.994589190664461\n",
+      "8.524319302531314\n",
+      "0.0\n",
+      "9.69575690830546\n",
+      "linear_combo\n",
+      "30.67774539050767\n",
+      "115.41746871215442\n",
+      "0.0\n",
+      "106.76398856381164\n"
      ]
     }
    ],
    "source": [
     "from scipy.spatial.distance import pdist, squareform\n",
     "\n",
-    "def euclidean(rowA, rowB):\n",
-    "    return np.sqrt(np.square(rowA - rowB).sum())\n",
+    "inverse_covariance_matrix = None # Global variable to hold inverse covariance matrix\n",
     "\n",
+    "# Helper functions for distance functions\n",
     "def minkowski_distance(rowA, rowB, r):\n",
     "    return np.power(np.power(np.abs(rowA - rowB), r).sum(), 1 / r)\n",
+    "\n",
+    "def calc_inv_covariance_matrix(data):\n",
+    "    x_mean = data.mean(axis = 0) # Get means\n",
+    "    x_centered = data - x_mean # Get centered data\n",
+    "    covariance_matrix = x_centered.T.dot(x_centered) / (len(data) - 1) # Covariance matrix\n",
+    "    return np.linalg.inv(covariance_matrix) # Inverse Covariance matrix\n",
+    "\n",
+    "# Distance functions\n",
+    "def euclidean(rowA, rowB):\n",
+    "    return np.sqrt(np.square(rowA - rowB).sum())\n",
     "\n",
     "def minkowski_distance_1(rowA, rowB):\n",
     "    return minkowski_distance(rowA, rowB, 1)\n",
@@ -229,22 +274,34 @@
     "    return minkowski_distance(rowA, rowB, 5)\n",
     "\n",
     "def mahalanobis_distance(rowA, rowB):\n",
-    "    return 69\n",
+    "    global inverse_covariance_matrix\n",
+    "    diff = rowA - rowB\n",
+    "    diff = diff.reshape(1, diff.shape[0])\n",
+    "    result = diff @ inverse_covariance_matrix @ diff.T\n",
+    "    result = result[0][0]\n",
+    "    result = np.sqrt(result)\n",
+    "    return result\n",
     "\n",
     "def cosine_similarity(rowA, rowB):\n",
     "    return rowA.dot(rowB) / np.sqrt(np.square(rowA).sum()) / np.sqrt(np.square(rowB).sum())\n",
     "\n",
-    "def correlation(rowA, rowB):\n",
-    "    return 69\n",
+    "# TODO: Ask prof for clarification\n",
+    "def correlation(rowA, rowB): \n",
+    "    rowA_hat = (rowA - np.mean(rowA)) / np.std(rowA)\n",
+    "    rowB_hat = (rowB - np.mean(rowB)) / np.std(rowB)\n",
+    "    return rowA_hat.dot(rowB_hat)\n",
     "\n",
+    "# Euclidean + Minkowski distance where r=1\n",
     "def linear_combo(rowA, rowB):\n",
-    "    return 69\n",
+    "    return euclidean(rowA, rowB) + minkowski_distance_1(rowA, rowB)\n",
     "\n",
     "def generateMatrix(data, distance_func):\n",
     "    matrix = squareform(pdist(data, metric=distance_func))\n",
     "    return matrix\n",
     "\n",
     "def generateMatricesForDataset(data, distance_func_list):\n",
+    "    global inverse_covariance_matrix\n",
+    "    inverse_covariance_matrix = calc_inv_covariance_matrix(data) # Set global inverse covariance matrix variable\n",
     "    matrix_list = []\n",
     "    for distance_func in distance_func_list:\n",
     "         matrix = generateMatrix(data, distance_func)\n",
@@ -255,34 +312,32 @@
     "         print(matrix[1598][1598])\n",
     "         print(matrix[1500][888])\n",
     "\n",
-    "\n",
     "wine_red_sorted_quality = wine_red.sort_values(by='quality')\n",
     "wine_white_sorted_quality = wine_white.sort_values(by='quality')\n",
-    "wine_red_sorted_quality = wine_red_sorted_quality.drop(columns='quality')\n",
-    "wine_white_sorted_quality = wine_white_sorted_quality.drop(columns='quality')\n",
+    "wine_red_sorted_quality = wine_red_sorted_quality.drop(columns=['quality', 'alcohol']) # Need just first 10\n",
+    "wine_white_sorted_quality = wine_white_sorted_quality.drop(columns=['quality', 'alcohol']) # Need just first 10\n",
     "wine_red_sorted_quality = wine_red_sorted_quality.reset_index(drop=True)\n",
     "wine_white_sorted_quality = wine_white_sorted_quality.reset_index(drop=True)\n",
     "\n",
     "wine_red_sorted_quality.to_csv('wine_red_sorted_quality', index=False)\n",
     "wine_white_sorted_quality.to_csv('wine_white_sorted_quality', index=False)\n",
     "\n",
+    "# test_row_A = np.array([6.7,0.58,0.08,1.8,0.097,15.0,65.0,0.9959,3.28,0.54])\n",
+    "# test_row_B = np.array([5.6,0.915,0.0,2.1,0.041,17.0,78.0,0.99346,3.68,0.73])\n",
+    "\n",
+    "# inverse_covariance_matrix = calc_inv_covariance_matrix(wine_red_sorted_quality)\n",
+    "# print(mahalanobis_distance(test_row_A, test_row_B))\n",
+    "\n",
+    "# cov_mat = covariance_matrix(wine_red_sorted_quality)\n",
+    "# print(cov_mat.shape)\n",
+    "# print(cov_mat)\n",
+    "\n",
+    "\n",
     "distance_func_list = [euclidean, minkowski_distance_1, minkowski_distance_3, minkowski_distance_5, \n",
     "                      mahalanobis_distance, cosine_similarity, correlation, linear_combo]\n",
-    "# distance_func_list = [cosine_similarity]\n",
+    "# distance_func_list = [mahalanobis_distance]\n",
     "\n",
-    "# euclidean_matrix = generateMatrix(wine_red_sorted_quality, euclidean)\n",
-    "# md_1 = generateMatrix(wine_red_sorted_quality, minkowski_distance_1)\n",
-    "generateMatricesForDataset(wine_red_sorted_quality, distance_func_list)\n",
-    "\n",
-    "# print(euclidean_matrix[69][420])\n",
-    "# print(euclidean_matrix[0][1])\n",
-    "# print(euclidean_matrix[1598][1598])\n",
-    "# print(euclidean_matrix[1500][888])\n",
-    "\n",
-    "# print(md_1[69][420])\n",
-    "# print(md_1[0][1])\n",
-    "# print(md_1[1598][1598])\n",
-    "# print(md_1[1500][888])"
+    "generateMatricesForDataset(wine_red_sorted_quality, distance_func_list)"
    ]
   }
  ],
