Q4: Used njit from numba to improve performance

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -19,7 +19,8 @@
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import numba"
    ]
   },
   {
@@ -201,33 +202,39 @@
    "source": [
     "from scipy.spatial.distance import pdist, squareform\n",
     "\n",
-    "inverse_covariance_matrix = None # Global variable to hold inverse covariance matrix\n",
+    "# inverse_covariance_matrix = None # Global variable to hold inverse covariance matrix\n",
     "\n",
     "# Helper functions for distance functions\n",
+    "@numba.njit\n",
     "def minkowski_distance(rowA, rowB, r):\n",
     "    return np.power(np.power(np.abs(rowA - rowB), r).sum(), 1 / r)\n",
     "\n",
     "def calc_inv_covariance_matrix(data):\n",
-    "    x_mean = data.mean(axis = 0) # Get means\n",
+    "    # x_mean = data.mean(axis = 0) # Get means\n",
+    "    x_mean = np.mean(data, axis=0, keepdims=True)\n",
     "    x_centered = data - x_mean # Get centered data\n",
     "    covariance_matrix = x_centered.T.dot(x_centered) / (len(data) - 1) # Covariance matrix\n",
     "    return np.linalg.inv(covariance_matrix) # Inverse Covariance matrix\n",
     "\n",
     "# Distance functions\n",
+    "@numba.njit\n",
     "def euclidean(rowA, rowB):\n",
     "    return np.sqrt(np.square(rowA - rowB).sum())\n",
     "\n",
+    "@numba.njit\n",
     "def minkowski_distance_1(rowA, rowB):\n",
     "    return minkowski_distance(rowA, rowB, 1)\n",
     "\n",
+    "@numba.njit\n",
     "def minkowski_distance_3(rowA, rowB):\n",
     "    return minkowski_distance(rowA, rowB, 3)\n",
     "\n",
+    "@numba.njit\n",
     "def minkowski_distance_5(rowA, rowB):\n",
     "    return minkowski_distance(rowA, rowB, 5)\n",
     "\n",
-    "def mahalanobis_distance(rowA, rowB):\n",
-    "    global inverse_covariance_matrix\n",
+    "@numba.njit\n",
+    "def mahalanobis_distance(rowA, rowB, inverse_covariance_matrix):\n",
     "    diff = rowA - rowB\n",
     "    diff = diff.reshape(1, diff.shape[0])\n",
     "    result = diff @ inverse_covariance_matrix @ diff.T\n",
@@ -235,30 +242,57 @@
     "    result = np.sqrt(result)\n",
     "    return result\n",
     "\n",
+    "@numba.njit\n",
     "def cosine_similarity(rowA, rowB):\n",
     "    return rowA.dot(rowB) / np.sqrt(np.square(rowA).sum()) / np.sqrt(np.square(rowB).sum())\n",
     "\n",
     "# TODO: Ask prof for clarification\n",
+    "@numba.njit\n",
     "def correlation(rowA, rowB): \n",
     "    rowA_hat = (rowA - np.mean(rowA)) / np.std(rowA)\n",
     "    rowB_hat = (rowB - np.mean(rowB)) / np.std(rowB)\n",
-    "    return rowA_hat.dot(rowB_hat)\n",
+    "    return rowA_hat.dot(rowB_hat) / (len(rowA) - 1)\n",
     "\n",
     "# Euclidean + Minkowski distance where r=1\n",
+    "@numba.njit\n",
     "def linear_combo(rowA, rowB):\n",
     "    return euclidean(rowA, rowB) + minkowski_distance_1(rowA, rowB)\n",
     "\n",
-    "def generateMatrix(data, distance_func):\n",
-    "    matrix = squareform(pdist(data, metric=distance_func))\n",
+    "@numba.njit\n",
+    "def get_distance_function_by_index(rowA, rowB, dist_function_index, inverse_covariance_matrix):\n",
+    "    if dist_function_index == 0:\n",
+    "        return euclidean(rowA, rowB)\n",
+    "    elif dist_function_index == 1:\n",
+    "        return minkowski_distance_1(rowA, rowB)\n",
+    "    elif dist_function_index == 2:\n",
+    "        return minkowski_distance_3(rowA, rowB)\n",
+    "    elif dist_function_index == 3:\n",
+    "        return minkowski_distance_5(rowA, rowB)\n",
+    "    elif dist_function_index == 4:\n",
+    "        return mahalanobis_distance(rowA, rowB, inverse_covariance_matrix)\n",
+    "    elif dist_function_index == 5:\n",
+    "        return cosine_similarity(rowA, rowB)\n",
+    "    elif dist_function_index == 6:\n",
+    "        return correlation(rowA, rowB)\n",
+    "    elif dist_function_index == 7:\n",
+    "        return linear_combo(rowA, rowB)\n",
+    "\n",
+    "@numba.njit\n",
+    "def generateMatrix(data, distance_function_index, inverse_covariance_matrix):\n",
+    "    # matrix = squareform(pdist(data, metric=distance_func))\n",
+    "    matrix = np.zeros((len(data), len(data)))\n",
+    "    for row_i in range(len(data)):\n",
+    "        for row_j in range(len(data)):\n",
+    "            matrix[row_i][row_j] = get_distance_function_by_index(data[row_i], data[row_j], distance_function_index, inverse_covariance_matrix)\n",
+    "\n",
     "    return matrix\n",
     "\n",
     "def generateMatricesForDataset(data, distance_func_list):\n",
-    "    global inverse_covariance_matrix\n",
     "    inverse_covariance_matrix = calc_inv_covariance_matrix(data) # Set global inverse covariance matrix variable\n",
     "    matrix_list = []\n",
-    "    for distance_func in distance_func_list:\n",
-    "         matrix = generateMatrix(data, distance_func)\n",
-    "         matrix_list.append(matrix)\n",
+    "    for distance_function_index, distance_func in enumerate(distance_func_list):\n",
+    "        matrix = generateMatrix(data, distance_function_index, inverse_covariance_matrix)\n",
+    "        matrix_list.append(matrix)\n",
     "    return matrix_list\n",
     "\n",
     "\n",
@@ -270,16 +304,16 @@
     "wine_white_sorted_quality = wine_white_sorted_quality.reset_index(drop=True)\n",
     "\n",
     "# TODO: Remove later since we're making sample smaller\n",
-    "# wine_red_sorted_quality = wine_red_sorted_quality.iloc[:100]\n",
-    "# wine_white_sorted_quality = wine_white_sorted_quality.iloc[:100]\n",
+    "# wine_red_sorted_quality = wine_red_sorted_quality.iloc[:1000]\n",
+    "# wine_white_sorted_quality = wine_white_sorted_quality.iloc[:1000]\n",
     "\n",
     "distance_func_list = [euclidean, minkowski_distance_1, minkowski_distance_3, minkowski_distance_5, \n",
     "                      mahalanobis_distance, cosine_similarity, correlation, linear_combo]\n",
     "distance_func_names = ['Euclidean', 'Minkowski Distance, r=1', 'Minkowski Distance, r=3', 'Minkowski Distance r=5', \n",
     "                      'Mahalanobis Distance', 'Cosine Similarity', 'Correlation', 'Linear Combo']\n",
     "\n",
-    "red_wine_matrix_list = generateMatricesForDataset(wine_red_sorted_quality, distance_func_list)\n",
-    "white_wine_matrix_list = generateMatricesForDataset(wine_white_sorted_quality, distance_func_list)\n",
+    "red_wine_matrix_list = generateMatricesForDataset(wine_red_sorted_quality.to_numpy(), distance_func_list)\n",
+    "white_wine_matrix_list = generateMatricesForDataset(wine_white_sorted_quality.to_numpy(), distance_func_list)\n",
     "\n",
     "for matrix_index, red_wine_matrix in enumerate(red_wine_matrix_list):\n",
     "    ax = sns.heatmap(red_wine_matrix)\n",
