Save pictures to file

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ea23df30",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6146fff3",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bc55a2ac",
    "metadata": {},
    "outputs": [],
@@ -198,12 +198,17 @@
    "execution_count": null,
    "id": "39f10849",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10043/2120103893.py:79: NumbaPerformanceWarning: np.dot() is faster on contiguous arrays, called on (Array(float64, 1, 'A', False, aligned=True), Array(float64, 1, 'A', False, aligned=True))\n",
+      "  matrix[row_i][row_j] = get_distance_function_by_index(data[row_i], data[row_j], distance_function_index, inverse_covariance_matrix)\n"
+     ]
+    }
+   ],
    "source": [
-    "from scipy.spatial.distance import pdist, squareform\n",
-    "\n",
-    "# inverse_covariance_matrix = None # Global variable to hold inverse covariance matrix\n",
-    "\n",
     "# Helper functions for distance functions\n",
     "@numba.njit\n",
     "def minkowski_distance(rowA, rowB, r):\n",
@@ -279,7 +284,6 @@
     "\n",
     "@numba.njit\n",
     "def generateMatrix(data, distance_function_index, inverse_covariance_matrix):\n",
-    "    # matrix = squareform(pdist(data, metric=distance_func))\n",
     "    matrix = np.zeros((len(data), len(data)))\n",
     "    for row_i in range(len(data)):\n",
     "        for row_j in range(len(data)):\n",
@@ -295,7 +299,6 @@
     "        matrix_list.append(matrix)\n",
     "    return matrix_list\n",
     "\n",
-    "\n",
     "wine_red_sorted_quality = wine_red.sort_values(by='quality')\n",
     "wine_white_sorted_quality = wine_white.sort_values(by='quality')\n",
     "wine_red_sorted_quality = wine_red_sorted_quality.drop(columns=['quality', 'alcohol']) # Need just first 10\n",
@@ -304,8 +307,8 @@
     "wine_white_sorted_quality = wine_white_sorted_quality.reset_index(drop=True)\n",
     "\n",
     "# TODO: Remove later since we're making sample smaller\n",
-    "# wine_red_sorted_quality = wine_red_sorted_quality.iloc[:1000]\n",
-    "# wine_white_sorted_quality = wine_white_sorted_quality.iloc[:1000]\n",
+    "# wine_red_sorted_quality = wine_red_sorted_quality.iloc[:100]\n",
+    "# wine_white_sorted_quality = wine_white_sorted_quality.iloc[:100]\n",
     "\n",
     "distance_func_list = [euclidean, minkowski_distance_1, minkowski_distance_3, minkowski_distance_5, \n",
     "                      mahalanobis_distance, cosine_similarity, correlation, linear_combo]\n",
@@ -316,18 +319,20 @@
     "white_wine_matrix_list = generateMatricesForDataset(wine_white_sorted_quality.to_numpy(), distance_func_list)\n",
     "\n",
     "for matrix_index, red_wine_matrix in enumerate(red_wine_matrix_list):\n",
-    "    ax = sns.heatmap(red_wine_matrix)\n",
+    "    ax = sns.heatmap(red_wine_matrix, rasterized=True)\n",
     "    ax.set(title='Red Wine - {}'.format(distance_func_names[matrix_index]))\n",
     "    ax.xaxis.set_ticks_position('top')\n",
     "    plt.xticks(rotation=90)\n",
-    "    plt.show()\n",
+    "    plt.savefig('red_wine_{0}_{1}.png'.format(str(matrix_index), distance_func_list[matrix_index].__name__ ), dpi=150)\n",
+    "    plt.close()\n",
     "\n",
     "for matrix_index, white_wine_matrix in enumerate(white_wine_matrix_list):\n",
-    "    ax = sns.heatmap(white_wine_matrix)\n",
+    "    ax = sns.heatmap(white_wine_matrix, rasterized=True)\n",
     "    ax.set(title='White Wine - {}'.format(distance_func_names[matrix_index]))\n",
     "    ax.xaxis.set_ticks_position('top')\n",
     "    plt.xticks(rotation=90)\n",
-    "    plt.show()"
+    "    plt.savefig('white_wine_{0}_{1}.png'.format(str(matrix_index), distance_func_list[matrix_index].__name__ ), dpi=150)\n",
+    "    plt.close()"
    ]
   }
  ],
