Fixed correlation and cleaned up

--- a/CS653_HW2.ipynb
+++ b/CS653_HW2.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ea23df30",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6146fff3",
    "metadata": {},
    "outputs": [],
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bc55a2ac",
    "metadata": {},
    "outputs": [],
@@ -198,16 +200,7 @@
    "execution_count": null,
    "id": "39f10849",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_10043/2120103893.py:79: NumbaPerformanceWarning: np.dot() is faster on contiguous arrays, called on (Array(float64, 1, 'A', False, aligned=True), Array(float64, 1, 'A', False, aligned=True))\n",
-      "  matrix[row_i][row_j] = get_distance_function_by_index(data[row_i], data[row_j], distance_function_index, inverse_covariance_matrix)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Helper functions for distance functions\n",
     "@numba.njit\n",
@@ -215,7 +208,6 @@
     "    return np.power(np.power(np.abs(rowA - rowB), r).sum(), 1 / r)\n",
     "\n",
     "def calc_inv_covariance_matrix(data):\n",
-    "    # x_mean = data.mean(axis = 0) # Get means\n",
     "    x_mean = np.mean(data, axis=0, keepdims=True)\n",
     "    x_centered = data - x_mean # Get centered data\n",
     "    covariance_matrix = x_centered.T.dot(x_centered) / (len(data) - 1) # Covariance matrix\n",
@@ -251,12 +243,11 @@
     "def cosine_similarity(rowA, rowB):\n",
     "    return rowA.dot(rowB) / np.sqrt(np.square(rowA).sum()) / np.sqrt(np.square(rowB).sum())\n",
     "\n",
-    "# TODO: Ask prof for clarification\n",
     "@numba.njit\n",
     "def correlation(rowA, rowB): \n",
     "    rowA_hat = (rowA - np.mean(rowA)) / np.std(rowA)\n",
     "    rowB_hat = (rowB - np.mean(rowB)) / np.std(rowB)\n",
-    "    return rowA_hat.dot(rowB_hat) / (len(rowA) - 1)\n",
+    "    return rowA_hat.dot(rowB_hat)\n",
     "\n",
     "# Euclidean + Minkowski distance where r=1\n",
     "@numba.njit\n",
@@ -305,10 +296,6 @@
     "wine_white_sorted_quality = wine_white_sorted_quality.drop(columns=['quality', 'alcohol']) # Need just first 10\n",
     "wine_red_sorted_quality = wine_red_sorted_quality.reset_index(drop=True)\n",
     "wine_white_sorted_quality = wine_white_sorted_quality.reset_index(drop=True)\n",
-    "\n",
-    "# TODO: Remove later since we're making sample smaller\n",
-    "# wine_red_sorted_quality = wine_red_sorted_quality.iloc[:100]\n",
-    "# wine_white_sorted_quality = wine_white_sorted_quality.iloc[:100]\n",
     "\n",
     "distance_func_list = [euclidean, minkowski_distance_1, minkowski_distance_3, minkowski_distance_5, \n",
     "                      mahalanobis_distance, cosine_similarity, correlation, linear_combo]\n",
